--- a/TODO
+++ b/TODO
@@ -1,17 +1,17 @@
-Version 0.0.0:
+Version 0.1.0:
     Type parsing:
         ✔ FEAT: Add a regex for each type @done(22-09-04 15:37)
         ✔ Implement type parsing for each cell. @done(22-09-04 15:37)
         ✔ Implement type parsing for each column. @done(22-09-04 15:37)
         ✔ Implement column alignment parsing. @done(22-09-04 15:37)
     Publish as package:
-        ☐ CHORE: Add setup.py @high
-        ☐ CHORE: Structure the package. @high
+        ✔ CHORE: Add setup.py @high @done(22-09-11 17:28)
+        ✔ CHORE: Structure the package. @high @started(22-09-11 16:02) @done(22-09-11 17:28) @lasted(1h26m37s)
         ☐ CHORE: Change imports to correct form. @high
     ✔ FIX: Bug on repeated header. @critical @started(22-09-11 13:17) @done(22-09-11 14:36) @lasted(1h19m3s)
     ✔ FEAT: Add possibility of no header. @high @started(22-09-11 15:11) @done(22-09-11 15:50) @lasted(39m29s)
     ✔ FIX: Missing value not showing. @high @done(22-09-11 15:51)
-Version 0.1.0:
+Version 0.2.0:
     ☐ FEAT: Add support for empty cells. @low
     ☐ FEAT: Add float alignment in Cell. @low
     ☐ FEAT: Implement border manipulation. @low
